k8s/cluster2/base/metabase/metabase.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metabase-deployment
  namespace: metabase
  labels:
    app: metabase
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metabase
  template:
    metadata:
      labels:
        app: metabase
    spec:
      volumes:
      - name: metabase-data-volume
        persistentVolumeClaim:
          claimName: metabase-db
      containers:
      - name: metabase
        image: metabase/metabase
        ports:
        - containerPort: 3000
        volumeMounts:
          - name: metabase-data-volume    # configure this to persist notebook
            mountPath: /metabase-data
---
kind: Service
apiVersion: v1
metadata:
  name: metabase-server
  namespace: metabase
spec:
  ports:
    - name: http
      port: 80
      targetPort: 3000
  selector:
    app: metabase
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metabase-ingress
  namespace: metabase
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
    - host: metabase.worldl.xpt
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: metabase-server
                port:
                  number: 80
